Amélioration design tab Bio

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,12 +3,13 @@
         "label": {
             "activity": "Activity",
             "armors": "Armors",
-            "bio": "Character",
             "bond": "Lien",
+            "bonus": "Damage Bonus",
+            "bio": "Biography",    
+            "traits": "Personality traits",                    
             "boons": "Boons",
             "boon": "Boon",
-            "bonus": "Damage Bonus",
-            "melee": "Corps-à-corps",
+            "melee": "Hand-to-hand",
             "cap_off": "Attacks",
             "category": "Category",
             "character": "Character",
@@ -18,8 +19,9 @@
             "equipment": "Equipment",
             "elite": "Elite",
             "flaw": "Flaw",
-            "heroism": "Heroism",
             "goal": "Goal",
+            "health": "Health",
+            "heroism": "Heroism",
             "name": "Name",
             "origin": "Origin",
             "quote": "Quote",
@@ -29,7 +31,6 @@
             "trainings": "Trained in : ",
             "type": "Type",
             "unlock_sheet": "Unlock Sheet",
-            "health": "Health",
             "wealth": "Richesses",
             "weapons": "Weapons",
             "wounds": "Wounds"
