--- a/lang/fr.json
+++ b/lang/fr.json
@@ -5,7 +5,8 @@
             "armors": "Armures",
             "bond": "Lien",
             "bonus": "Bonus aux dégâts",
-            "bio": "Traits de personnalité",
+            "bio": "Biographie",
+            "traits": "Traits de personnalité",
             "boons": "Atouts",
             "boon": "Atout",
             "melee": "Corps-à-corps",
