Refactor gestion des rolls

--- a/lang/en.json
+++ b/lang/en.json
@@ -92,7 +92,7 @@
             "delete": "Delete",
             "tab":{
                 "boons": "Boons",
-                "bio": "Bio",
+                "bio": "Biography",
                 "combat": "Combat",
                 "equipment": "Equipment",
                 "notes": "Notes"
