--- a/lang/fr.json
+++ b/lang/fr.json
@@ -92,7 +92,7 @@
             "delete": "Supprimer",
             "tab":{
                 "boons": "Atouts",
-                "bio": "Bio",
+                "bio": "Biographie",
                 "combat": "Combat",
                 "equipment": "Équipement",
                 "notes": "Notes"
