Calcul de skillValue et damage dans l'item weapon

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -63,7 +63,7 @@
             },
             "type": {
                 "melee": "Corps-à-corps",
-                "ranged": "à distance"
+                "ranged": "A distance"
             },
             "add": "Nouvelle arme",
             "delete": "Supprimer l'arme",
